<?xml version="1.0"?>
<package format="2">
  <name>hummingbot</name>
  <version>0.0.1</version>
  <description>The hummingbot package for ROS 2</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="humming@todo.todo">humming</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/hummingbot</url> -->

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be ROS 2 packages or system dependencies -->

  <!-- Use buildtool_depend for build tool packages -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Use build_depend for packages you need at compile time -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend<sensor_msgs</build_depend>
  <build_depend<std_msgs</build_depend>

  <!-- Use exec_depend for packages you need at runtime -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend<sensor_msgs</exec_depend>
  <exec_depend<std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
